# docs/swagger.yaml
@@ -1242,6 +1242,35 @@ paths:
       summary: Update order
       tags:
       - orders
+  /payments/{order_id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a payment given order ID
+      parameters:
+      - description: Order ID
+        in: path
+        name: order_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/presenter.PaymentJsonResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/middleware.ErrorJsonResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/middleware.ErrorJsonResponse'
+      summary: Get a payment given order ID
+      tags:
+      - payments
   /payments/{order_id}/checkout:
     post:
       consumes:
