# internal/infrastructure/handler/payment_handler.go
@@ -24,6 +24,7 @@ func NewPaymentHandler(controller port.PaymentController) *PaymentHandler {
 func (h *PaymentHandler) Register(router *gin.RouterGroup) {
 	router.POST("/:order_id/checkout", h.Create)
 	router.POST("/callback", h.Update)
+	router.GET("/:order_id", h.Get)
 }
 
 // Create godoc
@@ -63,7 +64,7 @@ func (h *PaymentHandler) Create(c *gin.Context) {
 	c.Data(http.StatusOK, "application/json", output)
 }
 
-// Create godoc
+// Update godoc
 //
 //	@Summary		Update a payment (Webhook) (Reference 1.a.iii)
 //	@Description	Update a new payment (Webhook)
@@ -98,6 +99,44 @@ func (h *PaymentHandler) Update(c *gin.Context) {
 	}
 
 	output, err := h.controller.Update(
+		c.Request.Context(),
+		presenter.NewPaymentJsonPresenter(),
+		input,
+	)
+	if err != nil {
+		_ = c.Error(err)
+		return
+	}
+
+	c.Data(http.StatusOK, "application/json", output)
+}
+
+// Get godoc
+//
+//	@Summary		Get a payment given order ID
+//	@Description	Get a payment given order ID
+//	@Tags			payments
+//	@Accept			json
+//	@Produce		json
+//	@Param			order_id				path		int								true	"Order ID"
+//	@Success		201						{object}	presenter.PaymentJsonResponse	"Created"
+//	@Failure		400						{object}	middleware.ErrorJsonResponse	"Bad Request"
+//	@Failure		500						{object}	middleware.ErrorJsonResponse	"Internal Server Error"
+//	@Router			/payments/{order_id}	[get]
+func (h *PaymentHandler) Get(c *gin.Context) {
+
+	var body request.GetPaymentRequest
+	if err := c.ShouldBindUri(&body); err != nil {
+		fmt.Println(err)
+		_ = c.Error(domain.NewInvalidInputError(domain.ErrInvalidBody))
+		return
+	}
+
+	input := dto.GetPaymentInput{
+		OrderID: body.OrderID,
+	}
+
+	output, err := h.controller.Get(
 		c.Request.Context(),
 		presenter.NewPaymentJsonPresenter(),
 		input,
