# internal/infrastructure/handler/request/payment_request.go
@@ -57,3 +57,7 @@ type UpdatePaymentRequest struct {
 	Resource string `json:"resource" binding:"required"`
 	Topic    string `json:"topic" binding:"required"`
 }
+
+type GetPaymentRequest struct {
+	OrderID uint64 `uri:"order_id" binding:"required"`
+}
